refactor: 코드 리뷰 반영
- DB(JPA)단에서 필터링 조회
- 중복 변환 제거
- Channel N+1 문제 개선